# hibiki-logger

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  LLMGUIDE.md  MANIFEST.in  README.md  pyproject.toml
hibiki_logger/: __init__.py  config.py  discord_service.py  logger.py  models.py
tests/: test_config.py  test_discord_service.py  test_logger.py  test_models.py
